[package]
name = "pam-keepassxc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[features]
default = ["session"]
session = ["dep:fork"]

[dependencies]
anyhow = "1.0.89"
basic-toml = "0.1.9"
fork = { version = "0.2.0", optional = true }
nix = { version = "0.26.4", features = ["socket"] }
pamsm = { version = "0.5", features = ["libpam"] }
rustbus = "0.19.3"
serde = { version = "1.0.210", features = ["derive"] }
users = { version = "0.11.0", default-features = false }
