[package]
name = "pam-keepassxc"
version = "0.1.0"
license = "MPL-2.0 AND GPL-3.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[features]
default = ["session"]
session = []

[dependencies]
anyhow = "1.0.89"
basic-toml = "0.1.9"
log = "0.4.22"
nix = { version = "0.26.4", features = ["socket"] }
pamsm = { version = "0.5", features = ["libpam"] }
rustbus = "0.19.3"
secrecy = "0.10.3"
serde = { version = "1.0.210", features = ["derive"] }
syslog = "7.0.0"
